routine commit to keep up-to-date with progress on the task.

--- a/NutritionDataCoding2.ipynb
+++ b/NutritionDataCoding2.ipynb
@@ -47,12 +47,26 @@
     "            continue\n",
     "        # if the cell is bold, we know that it contains product category information\n",
     "        if current_cell.style.font.bold and '(cont.)' not in current_cell.value and current_cell.value[-2:] != ' .' and current_cell.value[0] != ' ':\n",
-    "            # set the first column in the current row of the restructured sheet to this product category\n",
-    "            if 'see' == current_cell.value[0:3]:\n",
-    "                current_cell.value = current_cell.value.split(u'\\u201d')[1]\n",
-    "            product_category = re.sub('\\(.*\\)', '', current_cell.value.split(',')[0])\n",
-    "            product_category = product_category.strip().replace(':', '').replace('.', '').replace('_', '').replace('\"', '')\n",
-    "            product_category = product_category.replace(u'\\u201c', '').replace(u'\\u201d', '')\n",
+    "            product_category = ''\n",
+    "            if 'see' in current_cell.value:\n",
+    "                for token in current_cell.value.split(u'\\u201d'):\n",
+    "                    if 'see' in token:\n",
+    "                        if '(' in token:\n",
+    "                            product_category += token.split('(')[0]\n",
+    "                            break\n",
+    "                        continue\n",
+    "                    else:\n",
+    "                        product_category += token\n",
+    "                        break\n",
+    "            else:\n",
+    "                product_category = current_cell.value\n",
+    "            if not product_category: # no text was returned by above logic\n",
+    "                continue             # move on to the previous row\n",
+    "            product_category = re.sub('\\(.*\\)', '', product_category.split(',')[0])\n",
+    "            if ':' in product_category:\n",
+    "                product_category = product_category.split(':')[0]\n",
+    "            product_category = product_category.strip().replace(')', '').replace(':', '').replace('.', '').replace('_', '').replace('\"', '')\n",
+    "            product_category = product_category.replace(u'\\u201c', '').replace(u'\\u201d', '').replace(u'\\u002A', '')\n",
     "            product_category = product_category.split('(')[0]\n",
     "            structured_sheet.cell(row=structured_sheet_pointer+1, column=1).value = product_category\n",
     "            if j not in product_category_rows:\n",
@@ -64,41 +78,79 @@
     "    for j in range(i+1, 0, -1): # step backwards through the rows of the spreadsheet\n",
     "        # grab data in current cell, in the first column\n",
     "        current_cell = sheet.cell(row=j, column=1)\n",
+    "        # if there isn't any text in the cell, we skip it\n",
     "        if not current_cell.value:\n",
     "            continue\n",
+    "        # if the cell contains bold text, its a product category row\n",
+    "        # we check the cell for product description text as well\n",
     "        if current_cell.style.font.bold:\n",
-    "            cell_text = re.sub('\\(.*\\)', '', current_cell.value) # remove all parenthesized text\n",
-    "            cell_tokens = cell_text.split(',') # split the cell's text into chunks, separated by comma occurence\n",
-    "            product_description = get_description(cell_tokens[1:]) # outsource implementation to method (remove chunk before 1st comma)\n",
-    "            if not product_description: # if there is no text left over\n",
+    "            cell_text = ''\n",
+    "            # logic to handle deliquent tokens containing \"see\"\n",
+    "            if 'see' in current_cell.value:\n",
+    "                # split cell text into tokens separted by right quotation marks (see \"...\" ...)\n",
+    "                for token in current_cell.value.split(u'\\u201d'):\n",
+    "                    # ignore tokens with \"see\" in them\n",
+    "                    if 'see' in token:\n",
+    "                        continue\n",
+    "                    # add the current token to the total valid cell text\n",
+    "                    else:\n",
+    "                        cell_text += token\n",
+    "            # if there are no occurrences of \"see\", take all the text in the cell\n",
+    "            else:\n",
+    "                cell_text = current_cell.value\n",
+    "                \n",
+    "            # remove all parenthesized text\n",
+    "            cell_text = re.sub('\\(.*\\)', '', cell_text)\n",
+    "            # split the cell's text into chunks, separated by comma occurence\n",
+    "            cell_tokens = cell_text.split(',')\n",
+    "            # outsource implementation to method (remove chunk before 1st comma)\n",
+    "            product_description = get_description(cell_tokens[1:])\n",
+    "            # if there is no text left over\n",
+    "            if not product_description:\n",
     "                break\n",
-    "            product_description = product_description.replace('.', '').replace('_', '').replace(':', '')\n",
+    "            # replacing delinquent text\n",
+    "            product_description = product_description.replace('.', '').replace(',', '').replace('_', '')\n",
+    "            product_description = product_description.replace(':', '').replace(u'\\u2014', '').replace(u'\\u002A', '')\n",
+    "            product_description = product_description.strip().replace(u'\\u201d', '').replace(u'\\u2014', '')\n",
+    "            # place our parsed product description in the restructured spreadsheet\n",
     "            structured_sheet.cell(row=structured_sheet_pointer+1, column=2).value = product_description\n",
+    "            # if we aren't currently tracking this row as a product description row, add it to the tracked list\n",
     "            if j not in product_description_rows:\n",
     "                product_description_rows.append(j)\n",
     "            break\n",
-    "        # if the cell contains some text preceding a semicolon, it must contain a product description\n",
+    "        # if the cell doesn't contain a semicolon, it typically doesn't contain a product description\n",
     "        if ':' not in current_cell.value:\n",
     "            continue\n",
-    "        else: # there must be a product description\n",
-    "            cell_text = re.sub('\\(.*\\)', '', current_cell.value) # remove all parenthesized text\n",
-    "            cell_tokens = cell_text.split(',') # split the cell's text into chunks, separated by comma occurence\n",
-    "            product_description = get_description(cell_tokens) # outsource implementation to method\n",
-    "            if not product_description: # if there is no text left over\n",
+    "        # there typically is a product description if it does\n",
+    "        else:\n",
+    "            # remove all parenthesized text\n",
+    "            cell_text = re.sub('\\(.*\\)', '', current_cell.value)\n",
+    "            # split the cell's text into chunks, separated by comma occurence\n",
+    "            cell_tokens = cell_text.split(',')\n",
+    "            # outsource implementation to method\n",
+    "            product_description = get_description(cell_tokens)\n",
+    "            # if there is no text left over...\n",
+    "            if not product_description:\n",
     "                continue\n",
-    "            product_description = product_description.replace('.', '').replace('_', '').replace(':', '')\n",
+    "            # replacing delinquent text\n",
+    "            product_description = product_description.replace('.', '').replace(',', '').replace('_', '')\n",
+    "            product_description = product_description.replace(':', '').replace(u'\\u2014', '').replace(u'\\u002A', '')\n",
+    "            product_description = product_description.strip().replace(u'\\u201d', '').replace(u'\\u2014', '')\n",
+    "            # place our parsed product description in the restructured spreadsheet\n",
     "            structured_sheet.cell(row=structured_sheet_pointer+1, column=2).value = product_description\n",
+    "            # if we aren't currently tracking this row as a product description row, add it to the tracked list\n",
     "            if j not in product_description_rows:\n",
     "                product_description_rows.append(j)\n",
     "            break\n",
-    "\n",
+    "    \n",
+    "    # if the cell is empty after the execution of this logic, set the text in the cell equal to \"NA\"\n",
     "    if not structured_sheet.cell(row=structured_sheet_pointer+1, column=2).value:\n",
     "        structured_sheet.cell(row=structured_sheet_pointer+1, column=2).value = 'NA'\n",
     "\n",
     "def get_description(tokens):\n",
     "    ret = ''\n",
     "    for token in tokens:\n",
-    "        if any(char.isdigit() for char in token) or len(token) == 0 or 'except as noted' in token:\n",
+    "        if any(char.isdigit() for char in token) or len(token) == 0 or 'except as noted' in token or 'see' in token:\n",
     "            continue\n",
     "        else:\n",
     "            if ret == '':\n",
@@ -144,7 +196,6 @@
     "        if j in product_category_rows or j+1 in brand_name_rows:\n",
     "            break\n",
     "        # if the cell contains parentheses\n",
-    "        \n",
     "        if '(' in current_cell.value and j in brand_name_rows and '(cont.)' not in current_cell.value:\n",
     "            # get the token with parentheses\n",
     "            token = current_cell.value.split('(')[0]\n",
@@ -154,7 +205,7 @@
     "                structured_sheet.cell(row=structured_sheet_pointer+1, column=3).value = type_\n",
     "                break\n",
     "        # if the cell doesn't contain parentheses and doesn't contain a semicolon\n",
-    "        elif ':' not in current_cell.value:\n",
+    "        elif ':' not in current_cell.value and '(' not in current_cell.value:\n",
     "            type_ = current_cell.value.replace('.', '').replace('_', '').strip()\n",
     "            type_ = remove_numerics(type_)\n",
     "            structured_sheet.cell(row=structured_sheet_pointer+1, column=3).value = type_\n",
@@ -184,7 +235,7 @@
     "            serving_size = format_serving_size(current_cell.value.split(','))\n",
     "\n",
     "            if serving_size:\n",
-    "                serving_size = serving_size.replace('.', '').replace('_', '').replace('*', '').strip()\n",
+    "                serving_size = serving_size.strip('.').replace('_', '').replace('*', '').strip()\n",
     "                structured_sheet.cell(row=structured_sheet_pointer+1, column=5).value = serving_size\n",
     "                break\n",
     "            else:\n",
@@ -195,7 +246,7 @@
     "            serving_size = format_serving_size(current_cell.value.split(','))\n",
     "\n",
     "            if serving_size:\n",
-    "                serving_size = serving_size.replace('.', '').replace('_', '').replace('*', '').strip()\n",
+    "                serving_size = serving_size.strip('.').replace('_', '').replace('*', '').strip()\n",
     "                structured_sheet.cell(row=structured_sheet_pointer+1, column=5).value = serving_size\n",
     "                break\n",
     "            else:\n",
@@ -204,7 +255,7 @@
     "def format_serving_size(tokens):\n",
     "    for token in tokens: # loop through each token\n",
     "        if any(char.isdigit() for char in token) and '(' not in token and u'\\N{DEGREE SIGN}' not in token: # looking for the token with the serving size data...\n",
-    "            token = token.replace('.', '').strip().strip(':')\n",
+    "            token = token.strip().strip(':')\n",
     "            return token.split(':')[0]\n",
     "        elif any(char.isdigit() for char in token.split(':')[0]) and '(' not in token.split(':')[0] and u'\\N{DEGREE SIGN}' not in token:\n",
     "            return token.split(':')[0].strip()"
@@ -228,7 +279,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Progress: 0 / 3881\n"
+      "Progress: 0 / 3618\n"
      ]
     },
     {
@@ -243,14 +294,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Progress: 500 / 3881\n",
-      "Progress: 1000 / 3881\n",
-      "Progress: 1500 / 3881\n",
-      "Progress: 2000 / 3881\n",
-      "Progress: 2500 / 3881\n",
-      "Progress: 3000 / 3881\n",
-      "Progress: 3500 / 3881\n",
-      "Progress: 3881 / 3881\n"
+      "Progress: 500 / 3618\n",
+      "Progress: 1000 / 3618\n",
+      "Progress: 1500 / 3618\n",
+      "Progress: 2000 / 3618\n",
+      "Progress: 2500 / 3618\n",
+      "Progress: 3000 / 3618\n",
+      "Progress: 3500 / 3618\n",
+      "Progress: 3618 / 3618\n"
      ]
     }
    ],
@@ -259,7 +310,7 @@
     "\n",
     "file_name = 'Food Counts 2000 Completed.xlsx'\n",
     "book = openpyxl.load_workbook(file_name)\n",
-    "worksheet = 'Sheet1'\n",
+    "worksheet = 'Sheet5'\n",
     "sheet = book[worksheet]\n",
     "\n",
     "import os.path\n",
@@ -348,7 +399,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": []
